--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,11 +42,15 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "electron": "^27.0.2",
     "electron-builder": "^24.6.4",
+    "eslint": "^8.52.0",
+    "eslint-plugin-react": "^7.33.2",
     "wait-on": "^7.0.1"
   }
 }
