--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,18 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react:start": "react-scripts start",
+    "react:build": "react-scripts build",
+    "react:test": "react-scripts test",
+    "react:eject": "react-scripts eject",
+    "dev": "concurrently -k \"cross-env NODE_ENV=development BROWSER=none yarn react:start\" \"yarn tsc:watch\" \"yarn electron:start\"",
+    "tsc:watch": "wait-on http://localhost:3000 && tsc -p electron -w",
+    "electron:start": "wait-on https://localhost:3000 && tsc -p electron && electron .",
+    "prebuild": "run-script-os",
+    "prebuild:default": "rm -rf dist",
+    "prebuild:windows": "rd /s /q dist || rem",
+    "build": "yarn react:build && tsc -p electron && electron-builder --publish=never --dir --x64",
+    "lint": "eslint './src/**/*.{ts,tsx,js,jsx}'"
   },
   "eslintConfig": {
     "extends": [
