fix: electron실행 커맨드 변경

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,8 @@
     "react:test": "react-scripts test",
     "react:eject": "react-scripts eject",
     "dev": "start /b yarn react:start & start /b yarn tsc:watch & start /b yarn electron:start",
-    "tsc:watch": "start /wait http://localhost:3000 && tsc -p ./electron -w",
-    "electron:start": "start /wait https://localhost:3000 && tsc -p electron && electron .",
+    "tsc:watch": "wait-on http://127.0.0.1:3000 && tsc -p ./electron -w",
+    "electron:start": "wait-on http://127.0.0.1:3000 && tsc -p electron && electron .",
     "prebuild": "run-script-os",
     "prebuild:default": "rm -rf dist",
     "prebuild:windows": "rd /s /q dist || rem",
